--- a/mind-match-project/src/components/entry/registration/TellAboutYourself/TellAboutYourself.module.css
+++ b/mind-match-project/src/components/entry/registration/TellAboutYourself/TellAboutYourself.module.css
@@ -12,7 +12,7 @@
     margin-top: 20px;
 }
 .text {
-    color: #FFFFFF;
+    color: #ffffff;
     font-size: 16px;
     font-weight: 600;
     line-height: 19px;
@@ -30,7 +30,58 @@
     font-family: "Gantari";
     border-radius: 10px;
     padding-left: 9px;
+    padding-right: 9px;
     border: none;
     height: 35px;
     margin-top: 10px;
+}
+.input_textarea {
+    height: 125px;
+    padding-top: 9px;
+}
+.input::placeholder {
+    font-family: "Gantari";
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 17px;
+    color: #ffffff80;
+}
+.error_text {
+    color: #dc1d0d;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 14px;
+}
+.tags_container {
+    margin-top: 16px;
+}
+.line {
+    width: 100%;
+    height: 1px;
+    border: none;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+.tags {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 5px;
+    max-width: max-content;
+}
+.tag {
+    border-radius: 10px;
+    border: 1px solid white;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 4.5px;
+    padding-bottom: 4.5px;
+    width: auto;
+}
+.tag_text {
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 14px;
+    color: #87FF7B
 }
