--- a/src/components/entry/entryCommonComponents/UnsuccessfulAttempt/UnsuccessfulAttempt.module.css
+++ b/src/components/entry/entryCommonComponents/UnsuccessfulAttempt/UnsuccessfulAttempt.module.css
@@ -1,3 +1,15 @@
+.overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
 .main {
     background-color: #282828;
     width: 245px;
