--- a/src/components/entry/registration/EmailPassword/EmailPassword.module.css
+++ b/src/components/entry/registration/EmailPassword/EmailPassword.module.css
@@ -1,6 +1,6 @@
 .container {
     background-color: #1b1b1b;
-    height: 100vh;
+    height: calc(100vh - 40px);
     padding: 20px;
     position: relative;
 }
