--- a/src/components/entry/login/PasswordRecovery/UnsuccessfulAttemptPassRec/UnsuccessfulAttemptPassRec.module.css
+++ b/src/components/entry/login/PasswordRecovery/UnsuccessfulAttemptPassRec/UnsuccessfulAttemptPassRec.module.css
@@ -9,10 +9,21 @@
     top: 0;
     left: 0;
     z-index: 1000;
-    transform: scale(0);
+    opacity: 0;
+    pointer-events: none;
 }
-.overlay.active {
-    transform: scale(1);
+.overlayActive {
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    opacity: 1;
 }
 .main {
     background-color: #282828;
